--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "mapmop",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "bulma": "^0.7.4",
-    "core-js": "^2.6.5",
-    "moment": "^2.24.0",
-    "vee-validate": "^2.2.7",
-    "vue": "^2.6.10",
-    "vue-awesome-notifications": "^3.0.2",
-    "vue-i18n": "^8.11.2",
-    "vue-router": "^3.0.6",
-    "vuex": "^3.1.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.1.4",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+	"name": "mapmop",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"axios": "^0.18.0",
+		"bulma": "^0.7.4",
+		"core-js": "^2.6.5",
+		"moment": "^2.24.0",
+		"vee-validate": "^2.2.7",
+		"vue": "^2.6.10",
+		"vue-awesome-notifications": "^3.0.2",
+		"vue-i18n": "^8.11.2",
+		"vue-router": "^3.0.6",
+		"vuelayers": "^0.11.4",
+		"vuex": "^3.1.1"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^3.1.1",
+		"@vue/cli-plugin-eslint": "^3.1.5",
+		"@vue/cli-service": "^3.1.4",
+		"babel-eslint": "^10.0.1",
+		"eslint": "^5.16.0",
+		"eslint-plugin-vue": "^5.0.0",
+		"vue-template-compiler": "^2.5.21"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"rules": {},
+		"parserOptions": {
+			"parser": "babel-eslint"
+		}
+	},
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions"
+	]
 }
