--- a/src/store/modules/game_settings.json
+++ b/src/store/modules/game_settings.json
@@ -14,42 +14,50 @@
     "ecolo": {
       "name": "Ecolo",
       "description": "",
-      "ability": "The city pollutions do not grow while the ecologist is there."
+      "ability": "The city pollutions do not grow while the ecologist is there.",
+      "color": "#77ff77"
     },
     "journalist": {
       "name": "Journalist",
       "description": "",
-      "ability": "Remove 2 pollutions point from different location whenever a location spreading level."
+      "ability": "Remove 2 pollutions point from different location whenever a location spreading level.",
+      "color": "#ffffff"
     },
     "dictator": {
       "name": "Dictator",
       "description": "",
-      "ability": "Can move each turn a pollution from his location to a nearby city."
+      "ability": "Can move each turn a pollution from his location to a nearby city.",
+      "color": "#ff0000"
     },
     "politician": {
       "name": "Politician",
       "description": "",
-      "ability": "Cleaning cost 2 actions, Displacement action can make him move of 2 steps."
+      "ability": "Cleaning cost 2 actions, Displacement action can make him move of 2 steps.",
+      "color": "#0000ff"
     },
     "alien": {
       "name": "Alien",
       "description": "",
-      "ability": "Can once per game erase a city from the map. everything is lost, building and pollutions."
+      "ability": "Can once per game erase a city from the map. everything is lost, building and pollutions.",
+      "color": "#00ff00"
     },
     "nuclear_scientist": {
       "name": "Nuclear Scientist",
       "description": "",
-      "ability": "Cleaning can clean up to 2 nuclear pollution stack."
+      "ability": "Cleaning can clean up to 2 nuclear pollution stack.",
+      "color": "#ffff00"
     },
     "kaitera_saesman": {
       "name": "Kaitera Saesman",
       "description": "",
-      "ability": "Cleaning can clean up to 2 air pollution stack."
+      "ability": "Cleaning can clean up to 2 air pollution stack.",
+      "color": "#770077"
     },
     "dustman": {
       "name": "Dustman",
       "description": "",
-      "ability": "Cleaning can clean up to 2 Waaste pollution stack."
+      "ability": "Cleaning can clean up to 2 Waaste pollution stack.",
+      "color": "#aaaaaa"
     }
   },
   "pollutions": {
