Addinnng carddeck and small UI improvements on the player hand

--- a/src/store/modules/game_settings.json
+++ b/src/store/modules/game_settings.json
@@ -63,19 +63,19 @@
   "pollutions": {
     "nuclear": {
       "name": "Nuclear pollution",
-      "color": "#ff9900",
+      "color": "#dd8800",
       "description": "",
       "icon": ""
     },
     "weather": {
       "name": "Weather pollution",
-      "color": "#3399ff",
+      "color": "#0066aa",
       "description": "",
       "icon": ""
     },
     "waste": {
       "name": "Waste pollution",
-      "color": "#bb5555",
+      "color": "#882222",
       "description": "",
       "icon": ""
     }
