--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"core-js": "^2.6.5",
 		"moment": "^2.24.0",
 		"nanoid": "^2.0.2",
+		"node-sass": "^4.12.0",
+		"sass-loader": "^7.1.0",
 		"vee-validate": "^2.2.7",
 		"vue": "^2.6.10",
 		"vue-awesome-notifications": "^3.0.2",
